--- a/website/styles.css
+++ b/website/styles.css
@@ -1,8 +1,83 @@
 body{
     background-color: #c9e0f2;
 }
+
+section{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 h1{
-    color: white;
+    color: darkblue;
     font-size: 32px;
     font-family: 'Courier New', Courier, monospace;
 }
+/* Style the tab */
+.tab {
+    overflow: hidden;
+    border: 1px solid #ccc;
+    background-color: #f1f1f1;
+  }
+  
+  /* Style the buttons that are used to open the tab content */
+  .tab button {
+    background-color: inherit;
+    float: left;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 14px 16px;
+    transition: 0.3s;
+  }
+  
+  /* Change background color of buttons on hover */
+  .tab button:hover {
+    background-color: #ddd;
+  }
+  
+  /* Create an active/current tablink class */
+  .tab button.active {
+    background-color: #ccc;
+  }
+  
+  /* Style the tab content */
+  .tabcontent {
+    display: none;
+    padding: 6px 12px;
+    border: 1px solid #ccc;
+    border-top: none;
+  }
+
+  .button {
+    background-color: #c9e0f2;
+    border: none;
+    color: black;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+  }
+
+  h2 {
+    color: black
+  }
+
+  .wrapper {
+    width: 420px;
+    background: lightgray;
+    text-align: center;
+  }
+
+  .input-box input {
+    border: 2px solid rgba(255, 255, 255, .2);
+    border-radius: 40px;
+  }
+  .wrapper .input-box {
+    width: 100%;
+    height: 40px;
+    margin: 7px 0;
+  }
